--- a/index.html
+++ b/index.html
@@ -99,25 +99,54 @@
 								<span class="date">Upcoming Shows</span>
 							</header> -->
 
-							<h1>Upcoming</h1>
+							<h1>Upcoming Shows</h1>
 
-							<h4>* No upcoming shows *</h4>
+							<!-- <h4>* No upcoming shows *</h4> -->
 
-							<!-- <div class="row">
+							<div class="row">
 								<div class="col-sm-5">
-									<h4>6/29 - Saturday</h4>
-									<p></p>
+									<h4>3/13 - Thursday</h4>
+									<p>10PM</p>
 								</div>
 								<div class="col-sm-7 text-right">
-									<h4>Ciders From Mars</h4>
-									<p>Staunton VA</p>
-									<h6>w/ Valentin Prince</h6>
-									<h6>& 14Lbs</h6>
-
+									<h4>San Jac Saloon</h4>
+									<p>Austin TX</p>
+									<h6>SXSW Unofficial Showcase</h6>
+									<h6>Boxcar Entertainment</h6>
 								</div>
 							</div>
 
-							<hr class="break pad-vert-3x"> -->
+							<hr class="break pad-vert-3x">
+
+							<div class="row">
+								<div class="col-sm-5">
+									<h4>3/14 - Friday</h4>
+									<p>9PM</p>
+								</div>
+								<div class="col-sm-7 text-right">
+									<h4>San Jac Saloon</h4>
+									<p>Austin TX</p>
+									<h6>SXSW Unofficial Showcase</h6>
+									<h6>Boxcar Entertainment</h6>
+								</div>
+							</div>
+
+							<hr class="break pad-vert-3x">
+
+							<div class="row">
+								<div class="col-sm-5">
+									<h4>4/4 - Friday</h4>
+									<p>7PM</p>
+								</div>
+								<div class="col-sm-7 text-right">
+									<h4>Golden Pony</h4>
+									<p>Harrisonburg VA</p>
+									<h6>Opening for Wim Tapley & The Cannons</h6>
+									<h6><a href="https://www.eventbrite.com/e/wim-tapley-the-cannons-wthe-milestones-at-the-golden-pony-18-tickets-1234228002179">Get Tickets</a></h6>
+								</div>
+							</div>
+
+							<hr class="break pad-vert-3x">
 
 
 							<img src="images/BB_20-color.jpg" alt="" class="img-responsive margin-auto mt-5"/>
