added shows to rest of site

--- a/epk.html
+++ b/epk.html
@@ -101,9 +101,54 @@
 
 
 						<article class="shows post featured bio">
-							<!-- <header class="major">
+							<header class="major">
 								<span class="date">Upcoming Shows</span>
-							</header> -->
+							</header>
+
+							<div class="row">
+								<div class="col-sm-5">
+									<h4>3/13 - Thursday</h4>
+									<p>10PM</p>
+								</div>
+								<div class="col-sm-7 text-right">
+									<h4>San Jac Saloon</h4>
+									<p>Austin TX</p>
+									<h6>SXSW Unofficial Showcase</h6>
+									<h6>Boxcar Entertainment</h6>
+								</div>
+							</div>
+
+							<hr class="break pad-vert-3x">
+
+							<div class="row">
+								<div class="col-sm-5">
+									<h4>3/14 - Friday</h4>
+									<p>9PM</p>
+								</div>
+								<div class="col-sm-7 text-right">
+									<h4>San Jac Saloon</h4>
+									<p>Austin TX</p>
+									<h6>SXSW Unofficial Showcase</h6>
+									<h6>Boxcar Entertainment</h6>
+								</div>
+							</div>
+
+							<hr class="break pad-vert-3x">
+
+							<div class="row">
+								<div class="col-sm-5">
+									<h4>4/4 - Friday</h4>
+									<p>7PM</p>
+								</div>
+								<div class="col-sm-7 text-right">
+									<h4>Golden Pony</h4>
+									<p>Harrisonburg VA</p>
+									<h6>Opening for Wim Tapley & The Cannons</h6>
+									<h6><a href="https://www.eventbrite.com/e/wim-tapley-the-cannons-wthe-milestones-at-the-golden-pony-18-tickets-1234228002179">Get Tickets</a></h6>
+								</div>
+							</div>
+
+							<hr class="break pad-vert-3x">
 
 							<h1 class="mb-0">About the Band</h1>
 
