--- a/shows.html
+++ b/shows.html
@@ -82,8 +82,53 @@ gtag('config', 'G-8NWD1VP16E');
                 <article class="shows post featured">
 
 
-    							<h1>No Upcoming Shows</h1>
+    							<h1>Upcoming Shows</h1>
 
+
+                  <div class="row">
+    								<div class="col-sm-5">
+    									<h4>3/13 - Thursday</h4>
+    									<p>10PM</p>
+    								</div>
+    								<div class="col-sm-7 text-right">
+    									<h4>San Jac Saloon</h4>
+    									<p>Austin TX</p>
+    									<h6>SXSW Unofficial Showcase</h6>
+    									<h6>Boxcar Entertainment</h6>
+    								</div>
+    							</div>
+
+    							<hr class="break pad-vert-3x">
+
+    							<div class="row">
+    								<div class="col-sm-5">
+    									<h4>3/14 - Friday</h4>
+    									<p>9PM</p>
+    								</div>
+    								<div class="col-sm-7 text-right">
+    									<h4>San Jac Saloon</h4>
+    									<p>Austin TX</p>
+    									<h6>SXSW Unofficial Showcase</h6>
+    									<h6>Boxcar Entertainment</h6>
+    								</div>
+    							</div>
+
+    							<hr class="break pad-vert-3x">
+
+    							<div class="row">
+    								<div class="col-sm-5">
+    									<h4>4/4 - Friday</h4>
+    									<p>7PM</p>
+    								</div>
+    								<div class="col-sm-7 text-right">
+    									<h4>Golden Pony</h4>
+    									<p>Harrisonburg VA</p>
+    									<h6>Opening for Wim Tapley & The Cannons</h6>
+    									<h6><a href="https://www.eventbrite.com/e/wim-tapley-the-cannons-wthe-milestones-at-the-golden-pony-18-tickets-1234228002179">Get Tickets</a></h6>
+    								</div>
+    							</div>
+
+    							<hr class="break pad-vert-3x">
 
     							<!-- <div class="row">
     								<div class="col-sm-5">
