--- a/shows.html
+++ b/shows.html
@@ -85,48 +85,7 @@ gtag('config', 'G-8NWD1VP16E');
     							<h1>Upcoming Shows</h1>
 
 
-                  <div class="row">
-    								<div class="col-sm-5">
-    									<h4>3/13 - Thursday</h4>
-    									<h6>10PM</h6>
-    								</div>
-    								<div class="col-sm-7 text-right">
-    									<h4>San Jac Saloon</h4>
-    									<p>Austin TX</p>
-    									<h6>SXSW Unofficial Showcase</h6>
-    									<h6 style="font-size:.7rem;">Boxcar Entertainment</h6>
-    								</div>
-    							</div>
-
-    							<hr class="break pad-vert-3x">
-
-    							<div class="row">
-    								<div class="col-sm-5">
-    									<h4>3/14 - Friday</h4>
-    									<h6>9PM</h6>
-    								</div>
-    								<div class="col-sm-7 text-right">
-    									<h4>San Jac Saloon</h4>
-    									<p>Austin TX</p>
-    									<h6>SXSW Unofficial Showcase</h6>
-    									<h6 style="font-size:.7rem;">Boxcar Entertainment</h6>
-    								</div>
-    							</div>
-
-    							<hr class="break pad-vert-3x">
-
-    							<div class="row">
-    								<div class="col-sm-5">
-    									<h4>4/4 - Friday</h4>
-    									<h6>7PM</h6>
-    								</div>
-    								<div class="col-sm-7 text-right">
-    									<h4>Golden Pony</h4>
-    									<p>Harrisonburg VA</p>
-    									<h6>Opening for Wim Tapley & The Cannons</h6>
-    									<h6 style="margin-top:22px;"><a style="background-color:#c75dc7; color:#fff; padding:10px 15px;" href="https://www.eventbrite.com/e/wim-tapley-the-cannons-wthe-milestones-at-the-golden-pony-18-tickets-1234228002179">Get Tickets</a></h6>
-    								</div>
-    							</div>
+                  <h3>No Upcoming Shows</h3>
 
     							<hr class="break pad-vert-3x">
 
